--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:role-certo": "node dist/role-certo/server/server.mjs"
+    "serve:ssr:role-certo": "node dist/role-certo/server/server.mjs",
+    "vercel-build": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.15",
-    "@angular/cdk": "^20.2.8",
+    "@angular/cdk": "^19.2.15",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
-    "@angular/fire": "^20.0.1",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.0",
-    "@angular/material": "^20.2.8",
+    "@angular/material": "^19.2.15",
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
