--- a/.vercelignore
+++ b/.vercelignore
@@ -1,19 +1,16 @@
-node_modules
-.git
-.gitignore
-README.md
+node_modules/
+.git/
+.angular/
+dist/
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-coverage
 *.log
-.DS_Store
-Thumbs.db
-.vscode
+README.md
+MAPA_CORRECOES.md
+MAPA_IMPLEMENTACAO.md
 .editorconfig
-angular.json
-tsconfig.json
-tsconfig.app.json
-tsconfig.spec.json
+.gitignore
+.vercelignore
+.vscode/
+functions/
+server.js
+src/**/*.spec.ts
