--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,14 @@
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
+            },
+            "vercel": {
+              "browser": "src/main.ts",
+              "server": "src/main.server.ts",
+              "outputPath": "dist/role-certo",
+              "index": "src/index.html",
+              "prerender": true,
+              "ssr": false
             }
           },
           "defaultConfiguration": "production"
