--- a/vercel.json
+++ b/vercel.json
@@ -5,17 +5,24 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist/role-certo"
+        "distDir": "dist/role-certo/browser"
       }
     }
   ],
   "routes": [
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json))",
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json|webp))",
       "headers": {
         "cache-control": "public,max-age=31536000,immutable"
       },
       "dest": "/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|json|webp))\\.map",
+      "headers": {
+        "cache-control": "public,max-age=31536000,immutable"
+      },
+      "dest": "/$1.map"
     },
     {
       "src": "/(.*)",
